[tool.poetry]
name = "sandbox-seaborn"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sandbox_seaborn"}]

[tool.poetry.dependencies]
python = "^3.11"
seaborn = "^0.12.2"
jupyterlab = "^3.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
